--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <div class="Servies-container">
         <div class="servies-box-1">
           <div class="servies-img">
-            <div class="image"></div>
+            <div class="image1 image"></div>
           </div>
           <div class="servies-heading"><h1>Web Sites <span>Design</span></h1></div>
           <div class="servies-para">
@@ -179,7 +179,7 @@
         </div>
         <div class="servies-box-1">
           <div class="servies-img">
-            <div class="image"></div>
+            <div class="image2 image"></div>
           </div>
           <div class="servies-heading"><h1>Web Apps <span>Design</span></h1></div>
           <div class="servies-para">
@@ -189,7 +189,7 @@
         </div>
         <div class="servies-box-1">
           <div class="servies-img">
-            <div class="image"></div>
+            <div class="image3 image"></div>
           </div>
           <div class="servies-heading"><h1>Theme <span>Design</span></h1></div>
           <div class="servies-para">
