--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#about-us">About us</a></li>
                 <li><a href="#Skills">Skills</a></li>
                 <li><a href="#Servies">Servies</a></li>
-                <li><a href="#contact-us">Contact us</a></li>
+                <li><a href="#contact">Contact us</a></li>
             </ul>
 
         </div>
@@ -197,6 +197,22 @@
               Repudiandae nulla quod fugiat ex</p>
           </div>                
         </div>
+      </div>
+
+    </section>
+
+    <section id="contact">
+      <div class="skills-heading">
+        <h1>Contact <span><u>Us</u></span></h1>
+     </div>
+      <div class="contact-container">
+        <div class="social-links">
+
+        </div>
+        <div class="form">
+
+        </div>
+
       </div>
 
     </section>
