--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <div class="servies-heading"><h1>Web Sites <span>Design</span></h1></div>
           <div class="servies-para">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae nulla quod fugiat ex</p>
+              Repudiandae nulla quod fugiat ex Repudiandae nulla quod fugiat Repudiandae fugiat</p>
           </div>                
         </div>
         <div class="servies-box-1">
@@ -184,7 +184,7 @@
           <div class="servies-heading"><h1>Web Apps <span>Design</span></h1></div>
           <div class="servies-para">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae nulla quod fugiat ex</p>
+              Repudiandae nulla quod fugiat ex Repudiandae nulla quod fugiat Repudiandae fugiat</p>
           </div>                
         </div>
         <div class="servies-box-1">
@@ -194,7 +194,7 @@
           <div class="servies-heading"><h1>Theme <span>Design</span></h1></div>
           <div class="servies-para">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae nulla quod fugiat ex</p>
+              Repudiandae nulla quod fugiat ex Repudiandae nulla quod fugiat Repudiandae fugiat</p>
           </div>                
         </div>
       </div>
@@ -210,6 +210,16 @@
 
         </div>
         <div class="form">
+          <label for="">Your Name</label>
+          <label for="">Your Name</label><br>
+
+          <input type="text">
+          <label for="">Your Email</label>
+          <input type="text"><br>
+          <label for="">Subject</label><br>
+          <input type="text"><br>
+          <label for="">Message</label><br>
+          <textarea name="" id="" cols="30" rows="10"></textarea>
 
         </div>
 
