--- a/index.html
+++ b/index.html
@@ -203,27 +203,41 @@
 
     <section id="contact">
       <div class="skills-heading">
-        <h1>Contact <span><u>Us</u></span></h1>
+        <h1 style="color: black;">Contact <span><u>Us</u></span></h1>
      </div>
       <div class="contact-container">
-        <div class="social-links">
+        <div class="image-div">
 
         </div>
-        <div class="form">
-          <label for="">Your Name</label>
-          <input type="text">
-          <label for="">Your Email</label>
-          <input type="text"><br>
-          <label for="">Subject</label><br>
-          <input type="text"><br>
-          <label for="">Message</label><br>
-          <textarea name="" id="" cols="30" rows="10"></textarea>
+        <div class="form-div">
+          <div class="form">
+            <h1>Have a question? <br><span>Contact us!</span></h1>
+            <form action="">
+              <label for="">Your Name</label><br>
+              <input type="text" placeholder="..............."><br>
+              <label for="">Your Email</label><br>
+              <input type="text" placeholder="..............."><br>
+              <label for="">Message</label><br>
+              <textarea name="" id="" cols="30" rows="10"></textarea>
+            </form>
+            <button class="btn">Send Message</button>
 
+          </div>
         </div>
 
       </div>
 
     </section>
+
+    <footer>
+      <div class="header-icons">
+        <a href="https://twitter.com/Muhamma94555253"><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/muhammad-ilyas-4706b0264/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://github.com/M-ilyas1"><i class="fa-brands fa-github"></i></a>
+      </div>
+    </footer>
 
 
 
