--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>Document</title>
 </head>
 <body>
+  <!-- <div id="progress">
+    <span id="progress-value">&#x1F815;</span>
+  </div> -->
     <header class="head">
         <div class="header-menu">
             <ul>
@@ -27,25 +30,9 @@
             <a href=""><i class="fa-brands fa-facebook"></i></a>
             <a href=""><i class="fa-brands fa-square-instagram"></i></a>
             <a href="https://github.com/M-ilyas1"><i class="fa-brands fa-github"></i></a>
-            <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <i class="fa fa-bars"></i>
-              </a> -->
         </div>
 
     </header>
-
-    <!-- JAVASCRIPT========================== -->
-
-    <script>
-        function myFunction() {
-          var x = document.getElementById("myTopnav");
-          if (x.className === "topnav") {
-            x.className += " responsive";
-          } else {
-            x.className = "topnav";
-          }
-        }
-    </script>
 
 
     <section id="heading-container">
@@ -106,7 +93,6 @@
     </section>
 
     <section id="Skills">
-        <hr><hr>
         <div class="skills-heading">
             <h1>My <span><u>Skills</u></span></h1>
         </div>
@@ -230,16 +216,24 @@
     </section>
 
     <footer>
-      <div class="header-icons">
-        <a href="https://twitter.com/Muhamma94555253"><i class="fa-brands fa-square-twitter"></i></a>
+      <div class="">
+
+      </div>
+      <div class="footer-div1">
+        <h1>Muhammad <span><u>Ilyas</u></span></h1>
+          <div class="footer-icon">
+            <a href="https://twitter.com/Muhamma94555253"><i class="fa-brands fa-square-twitter"></i></a>
             <a href="https://www.linkedin.com/in/muhammad-ilyas-4706b0264/"><i class="fa-brands fa-linkedin"></i></a>
             <a href=""><i class="fa-brands fa-facebook"></i></a>
             <a href=""><i class="fa-brands fa-square-instagram"></i></a>
             <a href="https://github.com/M-ilyas1"><i class="fa-brands fa-github"></i></a>
+          </div>
+          <p>&copy: Copyright <span>Muhammad Ilyas</span>. All Rights Reserved</p>
+          <p>Designed by Muhammad Ilyas</p>
       </div>
     </footer>
 
 
-
+<script src="app.js"></script>
 </body>
 </html>
