--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="servies-heading"><h1>Web Sites <span>Design</span></h1></div>
           <div class="servies-para">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae nulla quod fugiat Repudiandae nulla quod fugiat Repudiandae fugiat</p>
+              Repudiandae nulla quod fugiat Repudiandae quod fugiat Repudiandae fugiat</p>
           </div>                
         </div>
         <div class="servies-box-1">
@@ -170,7 +170,7 @@
           <div class="servies-heading"><h1>Web Apps <span>Design</span></h1></div>
           <div class="servies-para">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae nulla quod fugiat Repudiandae nulla quod fugiat Repudiandae fugiat</p>
+              Repudiandae nulla quod fugiat Repudiandae quod fugiat Repudiandae fugiat</p>
           </div>                
         </div>
         <div class="servies-box-1">
@@ -180,7 +180,7 @@
           <div class="servies-heading"><h1>Theme <span>Design</span></h1></div>
           <div class="servies-para">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae nulla quod fugiat Repudiandae nulla quod fugiat Repudiandae fugiat</p>
+              Repudiandae nulla quod fugiat Repudiandae quod fugiat Repudiandae fugiat</p>
           </div>                
         </div>
       </div>
