--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <li><a href="#Servies">Servies</a></li>
                 <li><a href="#contact">Contact us</a></li>
             </ul>
-
+        </div>
+        <div class="header-logo">
+          <div class="logo-img"></div>
         </div>
         <div class="header-icons">
             <a href="https://twitter.com/Muhamma94555253"><i class="fa-brands fa-square-twitter"></i></a>
@@ -37,7 +39,7 @@
 
     <section id="heading-container">
         <div class="heading-box">
-            <h1>I am <span><u>Muhammad ILyas</u></span>,<br> Software Engineer & Front-End Web Developer</h1>
+            <h1>I am <span><u>Muhammad ILyas</u></span>,<br>CREATIVE DEVELOPER & Front-End Web Developer</h1>
 
         </div>
     </section>
@@ -160,7 +162,7 @@
           <div class="servies-heading"><h1>Web Sites <span>Design</span></h1></div>
           <div class="servies-para">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae nulla quod fugiat Repudiandae quod fugiat Repudiandae fugiat</p>
+              Repudiandae nulla quod fugiat Repudiandae nulla quod fugiat Repudiandae fugiat</p>
           </div>                
         </div>
         <div class="servies-box-1">
@@ -170,7 +172,7 @@
           <div class="servies-heading"><h1>Web Apps <span>Design</span></h1></div>
           <div class="servies-para">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae nulla quod fugiat Repudiandae quod fugiat Repudiandae fugiat</p>
+              Repudiandae nulla quod fugiat Repudiandae nulla quod fugiat Repudiandae fugiat</p>
           </div>                
         </div>
         <div class="servies-box-1">
@@ -180,7 +182,7 @@
           <div class="servies-heading"><h1>Theme <span>Design</span></h1></div>
           <div class="servies-para">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae nulla quod fugiat Repudiandae quod fugiat Repudiandae fugiat</p>
+              Repudiandae nulla quod fugiat Repudiandae nulla quod fugiat Repudiandae fugiat</p>
           </div>                
         </div>
       </div>
@@ -220,7 +222,7 @@
 
       </div>
       <div class="footer-div1">
-        <h1>Muhammad <span><u>Ilyas</u></span></h1>
+        <!-- <h1>Muhammad <span><u>Ilyas</u></span></h1> -->
           <div class="footer-icon">
             <a href="https://twitter.com/Muhamma94555253"><i class="fa-brands fa-square-twitter"></i></a>
             <a href="https://www.linkedin.com/in/muhammad-ilyas-4706b0264/"><i class="fa-brands fa-linkedin"></i></a>
