--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section id="heading-container">
         <div class="heading-box">
-            <h1>I am <span><u>Muhammad ILyas</u></span>,<br>CREATIVE DEVELOPER & Front-End Web Developer</h1>
+            <h1>I am <span>Muhammad ILyas</span><br>Software Engineer & Front-End Web Developer</h1>
 
         </div>
     </section>
@@ -96,7 +96,7 @@
 
     <section id="Skills">
         <div class="skills-heading">
-            <h1>My <span><u>Skills</u></span></h1>
+            <h1>My <span>Skills</span></h1>
         </div>
         <div class="skills-bars">
             <div class="container">
@@ -151,7 +151,7 @@
 
     <section id="Servies">
       <div class="skills-heading">
-        <h1>My <span><u>Servies</u></span></h1>
+        <h1>My <span>Servies</span></h1>
     </div>
 
       <div class="Servies-container">
@@ -191,7 +191,7 @@
 
     <section id="contact">
       <div class="skills-heading">
-        <h1 style="color: black;">Contact <span><u>Us</u></span></h1>
+        <h1 style="color: black;">Contact <span>Us</span></h1>
      </div>
       <div class="contact-container">
         <div class="image-div">
